CTT_Package/objects/Patient_information_map__mdt.object
<CustomObject>
    <fields>
        <fullName>Account_Field__c</fullName>
        <label>Account Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Field__c</fullName>
        <label>Case Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exposed_Contact_Field__c</fullName>
        <label>Exposed Contact Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Patient information map</label>
    <pluralLabel>Patient information maps</pluralLabel>
</CustomObject>